--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,7 +26,7 @@ section{
 .blog {
  padding: 2px;
 }
-.clearfix {zoom:1}
+.clearfix {zoom:1}          /*for the zooming effect in image show case*/
 .clearfix:after {
 	content:'.';
 	clear:both;
@@ -39,12 +39,12 @@ section{
 /*---------------------------------------------------------------------------------------------------------------*/
 
 header{
-	 background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0, 0, 0, 0.7)),to(rgba(0, 0, 0, 0.7))),url(img/cover1.png);
+	 background-image: -webkit-gradient(linear,left top, left bottom,from(rgba(0, 0, 0, 0.7)),to(rgba(0, 0, 0, 0.7))),url(img/cover1.png);      
 	 background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)),url(img/cover1.png);
      background-size:cover;
 	 background-position: center;
      height:100vh;
-	background-attachment: fixed;
+	background-attachment: fixed;        /* for special effect scrolling*/
 }
 
 .hero-text-box{
@@ -60,7 +60,6 @@ header{
 h1,h2,h3{
 	letter-spacing: 1px;
 	text-transform: uppercase;
-
 }
 h1 {
 	color:#fff;
@@ -83,7 +82,6 @@ h2:after {
 	width:200px;
 	background-color:#e67e22;
 	content:"";
-	
 }
 h3 {
 	letter-spacing: 0px;
